fixed text overflow album title

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -380,6 +380,7 @@
     
     img {
         height: 150px;
+        width: 150px;
         border-radius: 5px;
     }
 }
@@ -410,6 +411,10 @@
 .album-title {
     font-weight: 600;
     margin: 10px 0px 5px 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 150px;
 }
 
 .album-release {
